utils: Remove hard coded strings from SAMLUtils
Signed-off-by: Rohit Yadav <rohit.yadav@shapeblue.com>